[package]
name = "lotko"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
frontbox = { path = "../frontbox-rs/frontbox" }
frontbox-turn-based = { path = "../frontbox-rs/frontbox-turn-based" }
frontbox-pin2dmd = { path = "../frontbox-rs/frontbox-pin2dmd" }
frontbox-sound = { path = "../frontbox-rs/frontbox-sound" }
tokio = { version = "1", features = ["full"] }
log = "0.4.29"
